--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_height="90dp"
         android:layout_marginTop="24dp"
         android:fontFamily="casual"
-        android:text="Hi dude!  Are you hungry? Ahh, Me too!! Then let's cook some food. Don't you have anow any recipe? Ohh, don't worry i have for you. Which kind of food do you want to eat? Let's choose from below."
+        android:text="Hi!  Are you hungry? Ahh, Me too!! Then let's cook some food. Don't you know any recipe? Ohh, don't worry I have for you. What kind of food do you want to eat? Let's choose from below"
         android:textAlignment="center"
         android:textSize="14sp"
         android:textStyle="bold"
